@@ -666,4 +666,14 @@ however, we need the complication for Perl. ---/
 /((?(R1)a+|(?1)b))/
     aaaabcde
 
+/a(*:any 
+name)/K
+    abc
+    
+/a(*:a\x{1234}b)/8K
+    abc
+
+/a(*:a£b)/8K 
+    abc
+
 /-- End of testinput11 --/
